spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,16 @@ height: 100vh;
   align-items: center;
   justify-content: center;
   background-color: rgb(7, 7, 37);
+ 
 }
 
 .main-container {
 
-  padding: 20px;
+  padding: 24px;
   border-radius: 15px;
   background-color: black;
   display: flex;
   flex-direction: column;
-  height: fit-content;
   max-width: 15.625rem;
 }
 
@@ -53,6 +53,8 @@ height: 100vh;
   margin-top: 15px;
   margin-bottom: 15px;
   text-align: center;
+ display: flex;
+  flex-direction: column;
   gap: 8px;
 }
 
